--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="jqueryTest.Interaction" hash-for-method="resizable">resizable</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="jqueryTest.Interaction" hash-for-method="selectable">selectable</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="resizable">
-                  </a> <!-- resizable -->
-                  <span class="method-name">resizable</span>
+                  <a name="selectable">
+                  </a> <!-- selectable -->
+                  <span class="method-name">selectable</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/cq/5b6r990n6djbzqsqrqngf3ldkwncv1/T/testng-eclipse--1429297360/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/cq/5b6r990n6djbzqsqrqngf3ldkwncv1/T/testng-eclipse--1202057618/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'resizable')
+data.setCell(0, 1, 'selectable')
 data.setCell(0, 2, 'jqueryTest.Interaction')
-data.setCell(0, 3, 9958);
+data.setCell(0, 3, 18578);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,7 +221,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">jqueryTest.Interaction</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">resizable</span>
+                <span class="method-name">selectable</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
